# OnlineWorker

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  SUPPORT.md  config.py  config.yaml.example  main.py  onlineworker-bot.spec  onlineworker-x86_64.spec  onlineworker.spec  pytest.ini  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
bot/: command_rules.py  event_helpers.py  events.py  filters.py  interaction_specs.py  keyboards.py  telegram_command_aliases.py  thread_controls.py  utils.py
core/: im_routes.py  lifecycle.py  provider_owner_bridge.py  provider_runtime_state.py  provider_session_bridge.py  provider_session_new.py  provider_usage.py  state.py  storage.py  telegram_formatting.py
deploy/: BUILD.md  com.onlineworker.plist  install.sh
docs/: README.md  markdown-render-options.html  markdown-render-strategy-options.html
mac-app/: index.html  package.json  vite.config.ts
mac-app/src-tauri/: Cargo.toml  default-config.yaml  tauri.conf.json  tauri.internal.conf.json
mac-app/src-tauri/capabilities/: advanced.json  default.json
mac-app/src-tauri/hook-relays/: claude_hook_relay.py
mac-app/src-tauri/icons/: icon.icns
mac-app/src-tauri/src/: lib.rs  main.rs  menubar.rs
mac-app/src-tauri/src/commands/: ai_config.rs  attachment_cache.rs  claude.rs  codex.rs  command_catalog.rs  command_registry.rs  config.rs  config_provider.rs  dashboard.rs  dashboard_types.rs  logs.rs  mod.rs  provider_bridge_common.rs  provider_sessions.rs  provider_usage.rs  service.rs  session_state.rs  support_bundle.rs  task_board_state.rs  telegram.rs  terminal.rs
mac-app/src-tauri/src/commands/config_provider/: ai_config_store.rs  notification_metadata.rs  provider_assets.rs
mac-app/src-tauri/src/commands/dashboard/: provider_status.rs  recent_activity.rs
plugins/: README.md  __init__.py
scripts/: README.md  archive_live_verify.py  archive_roundtrip_check.py  (+22 more)
(+450 files in other folders)
