[package]
name = "onlineworker-app"
version = "0.2.0"
description = "OnlineWorker Mac App"
authors = ["wxy"]
license = "MIT"
repository = ""
default-run = "onlineworker-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "onlineworker_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "onlineworker-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
