[package]
name = "onlineworker-app"
version = "1.8.1"
description = "OnlineWorker Mac App"
authors = ["OnlineWorker Contributors"]
license = "MIT"
repository = ""
default-run = "onlineworker-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "onlineworker_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "onlineworker-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2", features = ["json", "proxy-from-env", "socks-proxy"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
